# laba-diena-tts

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  install_manifest.txt  libLithuanianTTS.so.1.0.0  libRateChange.so.1.0.0  libTextNormalization.so.1.0.0  libUnitSelection.so.1.0.0
include/: LithuanianTTS.h  TextNormalization  Transcription.h  Transcription.h~  lith-tts.h~
native-modules/LithUSS/: LithUSS.cpp
native-modules/LithuanianTTS/: LithuanianTTS.cpp  LithuanianTTS.cpp~  LithuanianTTS.h  fv2id.cpp  getLUSSErrorMessages.cpp  raw2wav.cpp  raw2wav.cpp~
native-modules/RateChange/: RateChange.cpp  RateChange.h
native-modules/TextNormalization/: TextNormalization.cpp  TextNormalization.h
native-modules/Transcription/: Transcription.cpp  Transcription.cpp~
native-modules/UnitSelection/: UnitSelection.cpp  UnitSelection.h
native-modules/include/: LithUSS_Error.h
native-modules/transcrLUSS/: transcrLUSS.cpp
